--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.6.0",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
