--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "immutable": "^4.0.0-rc.14",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-localize": "^2.1.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
+    "react-native-sqlite-storage": "^5.0.0",
     "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
