--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-localize": "^2.1.4",
+    "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
     "react-native-sqlite-storage": "^5.0.0",
