--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localize": "^2.1.4",
+    "react-native-render-html": "^6.1.0",
     "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
