--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "immutable": "^4.0.0-rc.14",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.10.3",
