--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0"
   },
@@ -45,7 +44,9 @@
     "jest": "^27.1.0",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "redux-logger": "^3.0.6",
+    "redux-devtools-extension": "^2.13.9"
   },
   "jest": {
     "preset": "react-native"
