--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.0.7",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "axios": "^0.21.4",
     "immutable": "^4.0.0-rc.14",
     "moment": "^2.29.1",
     "react": "17.0.2",
@@ -45,8 +46,8 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
-    "redux-logger": "^3.0.6",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6"
   },
   "jest": {
     "preset": "react-native"
