--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/stack": "^6.0.7",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "appcenter": "^4.2.0",
+    "appcenter-analytics": "^4.2.0",
+    "appcenter-crashes": "^4.2.0",
     "axios": "^0.21.4",
     "immutable": "^4.0.0-rc.14",
     "moment": "^2.29.1",
