--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,4 +27,10 @@ android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.93.0
 
+
+MYAPP_RELEASE_STORE_FILE=laowei-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=laowei-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=laowei_123
+MYAPP_RELEASE_KEY_PASSWORD=laowei_123
+
 # org.gradle.jvmargs=-DsocksProxyHost=127.0.0.1 -DsocksProxyPort=10000
