--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "^3.6.0",
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-svg": "^12.1.1",
+    "react-native-version-number": "^0.3.6",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
