--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-code-push": "^7.0.2",
+    "react-native-drawer": "^2.5.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localize": "^2.1.4",
     "react-native-render-html": "^6.1.0",
